fix: buy now button align

--- a/src/sass/base/_buttons-and-links.scss
+++ b/src/sass/base/_buttons-and-links.scss
@@ -96,6 +96,10 @@
 
   &.buy__button {
     @extend %button-style-main;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
   }
 }
 
